add users model + create flyway migration file

--- a/CloudStorage/src/main/resources/application.properties
+++ b/CloudStorage/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.application.name=CloudStorage
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url="jdbc:postgresql://localhost:5432/CloudStorage"
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/CloudStorage
+spring.flyway.user=${DB_USERNAME}
+spring.flyway.password=${DB_PASSWORD}
