--- a/CloudStorage/src/main/resources/application.properties
+++ b/CloudStorage/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=CloudStorage
 
 
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=vlad
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
 spring.flyway.enabled=true
 spring.flyway.url=jdbc:postgresql://localhost:5432/CloudStorage
-spring.flyway.user=${DB_USERNAME}
-spring.flyway.password=${DB_PASSWORD}
+spring.flyway.user=postgres
+spring.flyway.password=vlad
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
