--- a/CloudStorage/src/main/resources/application.properties
+++ b/CloudStorage/src/main/resources/application.properties
@@ -1,16 +1,27 @@
 spring.application.name=CloudStorage
 
-
+# ????????? ???? ??????
+spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
 spring.datasource.username=postgres
 spring.datasource.password=vlad
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ????????? Hibernate
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=true
+
+# Flyway ????????
 spring.flyway.enabled=true
 spring.flyway.url=jdbc:postgresql://localhost:5432/CloudStorage
 spring.flyway.user=postgres
 spring.flyway.password=vlad
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+
+# HikariCP ?????????
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=20000
