--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -93,6 +93,12 @@
             <version>1.19.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
