--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=vlad
 spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+server.servlet.encoding.charset=utf-8
 spring.mvc.hiddenmethod.filter.enabled=true
