--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.encoding.charset=utf-8
 spring.mvc.hiddenmethod.filter.enabled=true
+
+server.tomcat.remote-ip-header=x-forwarded-for
+server.tomcat.protocol-header=x-forwarded-proto
+server.tomcat.uri-encoding=UTF-8
