--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,4 +12,16 @@ spring.mvc.hiddenmethod.filter.enabled=true
 server.tomcat.remote-ip-header=x-forwarded-for
 server.tomcat.protocol-header=x-forwarded-proto
 server.tomcat.uri-encoding=UTF-8
+# ????????? ???????? ?????? ? Redis
+spring.session.store-type=redis
 
+# ????????? Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+
+# ????????? ??????
+server.servlet.session.timeout=3600
+server.servlet.session.cookie.name=MY_SESSION_COOKIE
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
