--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
-
+spring.config.import=classpath:secure.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=vlad
-spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
+spring.datasource.username=${secure.username}
+spring.datasource.password=${secure.password}
+spring.datasource.url=${secure.dbUrl}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.encoding.charset=utf-8
@@ -12,16 +12,19 @@ spring.mvc.hiddenmethod.filter.enabled=true
 server.tomcat.remote-ip-header=x-forwarded-for
 server.tomcat.protocol-header=x-forwarded-proto
 server.tomcat.uri-encoding=UTF-8
-# ????????? ???????? ?????? ? Redis
+
 spring.session.store-type=redis
 
-# ????????? Redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=
 
-# ????????? ??????
 server.servlet.session.timeout=3600
 server.servlet.session.cookie.name=MY_SESSION_COOKIE
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
+
+minio.username=${secure.minioUserName}
+minio.password=${secure.minioPassword}
+minio.endPoint=${secure.minioEndPoint}
+minio.bucket=${secure.minioBucket}
