--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -3,4 +3,66 @@ services:
   app:
     image: openjdk:17-jdk-slim
     container_name: cloud-storage-app
+    ports:
+      - "8080:8080"
     volumes:
+      - ./target/demo-0.0.1-SNAPSHOT.jar:/app.jar
+    command: java -jar /app.jar
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+      - DB_HOST=db
+      - REDIS_HOST=redis
+      - MINIO_HOST=minio
+    depends_on:
+      - db
+      - redis
+      - minio
+    networks:
+      - MainNetwork
+
+  db:
+    image: postgres:15
+    container_name: cloud-storage-db
+    env_file:
+      - src/main/resources/application.properties
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+      - MainNetwork
+
+  redis:
+    image: redis:6.2
+    container_name: cloud-storage-redis
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+    networks:
+      - MainNetwork
+
+  minio:
+    image: minio/minio
+    container_name: cloud-storage-minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio_data:/data
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    command: server /data --console-address ":9001"
+    networks:
+      - MainNetwork
+
+networks:
+  MainNetwork:
+#    - external: true
+
+volumes:
+  db_data:
+  redis_data:
+  minio_data:
+
