--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
 spring.config.import=classpath:secure.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${secure.username}
-spring.datasource.password=${secure.password}
-spring.datasource.url=${secure.dbUrl}
+spring.datasource.url=jdbc:postgresql://:5432/CloudStorage
+spring.datasource.username=postgres
+spring.datasource.password=vlad
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.servlet.encoding.charset=utf-8
@@ -15,7 +15,7 @@ server.tomcat.uri-encoding=UTF-8
 
 spring.session.store-type=redis
 
-spring.data.redis.host=localhost
+spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=6379
 spring.data.redis.password=
 
@@ -24,7 +24,14 @@ server.servlet.session.cookie.name=MY_SESSION_COOKIE
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 
-minio.username=${secure.minioUserName}
-minio.password=${secure.minioPassword}
-minio.endPoint=${secure.minioEndPoint}
-minio.bucket=${secure.minioBucket}
+minio.username=minioadmin
+minio.password=minioadmin
+minio.endPoint=http://${MINIO_HOST}:9000
+minio.bucket=user-files
+
+# Postgresql
+POSTGRES_NAME=CloudStorage
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=vlad
+POSTGRES_PORT=5432
+POSTGRES_HOST=cloud-storage-db
