--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 spring.config.import=classpath:secure.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://:5432/CloudStorage
+spring.datasource.url=jdbc:postgresql://localhost:5432/CloudStorage
 spring.datasource.username=postgres
 spring.datasource.password=vlad
 spring.jpa.hibernate.ddl-auto=update
@@ -28,10 +28,3 @@ minio.username=minioadmin
 minio.password=minioadmin
 minio.endPoint=http://${MINIO_HOST}:9000
 minio.bucket=user-files
-
-# Postgresql
-POSTGRES_NAME=CloudStorage
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=vlad
-POSTGRES_PORT=5432
-POSTGRES_HOST=cloud-storage-db
