--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -95,6 +95,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.6.0</version>
+        </dependency>
+
         <dependency>
 
             <groupId>org.springframework.boot</groupId>
