--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -28,3 +28,9 @@ minio.username=minioadmin
 minio.password=minioadmin
 minio.endPoint=http://${MINIO_HOST}:9000
 minio.bucket=user-files
+
+
+# ????????? Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
