--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -31,7 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
-src/main/resources/application.properties
+
+application.properties
 src/main/resources/secure.properties
 
 .env
