--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./target/demo-0.0.1-SNAPSHOT.jar:/app.jar
+      - ./demo-0.0.1-SNAPSHOT.jar:/app.jar
     command: java -jar /app.jar
     environment:
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
